see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Jun-2013 Jean-Marie Simonet
 ^ [#31134] *Improving Content Languages edit and manager. Thanks Benjamin Trenkle and Roland Dalmulder 
 # [#31147] *Install sample data None does not display tooltip.
 # [#31108] Fatal erorr right after install. Thanks Klas and Michael Babker
 $ [#26548] [patch] incorrect error check in menus.php. Thanks Rob Clayburn and Ben Tasker
 # [#30779] Fatal error in single contact category list if category is unpublished. Thanks Elin Waring.
 # [#31122] archived articles module shows multiple entries same month. Thanks David Hurley.
 # [#31128] Double category description newsfeed categories. Thanks Rob de Cleen and David Hurley
 # [#30150] com_content loads articles before error checking. Thanks Richard McDaniel.
 # [#29424] Multilevel select collapsed. Thanks Sergey Romanov.
 + [#31130] Added js files to protostar template and modified index.php. Thanks Buddhima Wijeweera
 # [#30576] $isNew not being passed to onContentBeforeSave. Thanks Elijah Madden

11-Jun-2013 Jean-Marie Simonet
 $ Adding Czech cs-CZ to installation language files

09-Jun-2013 Jean-Marie Simonet
 # [#30954] Support for accent-insensitive search using the default search component. Thanks Viliam Kubis
 # [#29560] jumping column in Contact Manager: Contacts. Thanks Daria Mikhailova and Roland Dalmulder

08-Jun-2013 Jean-Marie Simonet
 # [#31073] Preview image has height of max 18px. Thanks Piotr Konieczny
 # [#29766] Missed ordering lists in User Manager. Thanks Aleksander Linkov
 # [#30675] Display incorrect for type checkboxes. Thanks Chad Windnagle